manifests/guestbook-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
        - name: guestbook
          image: quay.io/gas_stocktrader/guestbook:3b5730930196e2ebc25252b9e35c2aab4b40028a
          ports:
            - containerPort: 9080
            - containerPort: 9443
