manifests/guestbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
        - name: guestbook
          image: quay.io/gas_stocktrader/guestbook:25e1ddbf2081283a69cf77d66094eb804620056a
          ports:
            - containerPort: 9080
            - containerPort: 9443
