manifests/guestbook-route.yaml
# Openshift Route
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: guestbook
spec:
  to:
    kind: Service
    name: guestbook-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
